# tom-scott

./: .clang-format  .cmake-format.py  .gitignore  CMakeLists.txt  Dockerfile  Makefile  docker-compose.yml
src/: commands.cpp  commands.hpp  config.cpp  config.hpp  main.cpp  places.cpp  places.hpp  utils.cpp  utils.hpp
